--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
   <!-- SWEET ALERT2 -->
   <script src="vendor/sweetalert2/sweetalert2.all.min.js"></script>
   <!-- polyfill para dar suporte a outros browsers -->
-  <script src="https://unpkg.com/promise-polyfill"></script>
+  <!-- <script src="https://unpkg.com/promise-polyfill"></script> -->
   <script src="js/modaisSweetAlert.js"></script>
   <!-- CANVAS -->
   <script src="vendor/canvas-js/canvasjs.min.js"></script>
@@ -695,9 +695,9 @@
   <!-- <script  src="vendor/type-Writer/typewriter.min.js"></script> -->
 
   <!-- API DO GOOGLE MAPS -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuP4Or3N_bw64sOWuSxvO9KiBwOvMqObY" type="text/javascript"></script>
-  <script src="vendor/gmaps/gmaps.min.js"></script>
-  <script src="js/exemplosGmaps.js"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuP4Or3N_bw64sOWuSxvO9KiBwOvMqObY" type="text/javascript"></script> -->
+  <!-- <script src="vendor/gmaps/gmaps.min.js"></script> -->
+  <!-- <script src="js/exemplosGmaps.js"></script> -->
   <script src="vendor/slick-carousel/slick.min.js"></script>
   <script>
     $('.carrousel').slick({
