--- a/index.html
+++ b/index.html
@@ -20,14 +20,9 @@
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
   <!-- Plugins CSSs -->
-  <link href="vendor/device-mockups/device-mockups.min.css" rel="stylesheet">
   <link href="css/new-age.min.css"                          rel="stylesheet">
-  <link href="vendor/aos/aos.css"                           rel="stylesheet">
-  <link href="vendor/sweetalert2/sweetalert2.min.css"       rel="stylesheet">
-  <link href="vendor/animate/animate.min.css"               rel="stylesheet">
-  <link href="vendor/modaal/dist/css/modaal.min.css"        rel="stylesheet">
-  <link href="vendor/slick-carousel/slick.css"              rel="stylesheet">
-  <link href="vendor/slick-carousel/slick-theme.css"        rel="stylesheet">
+  <link rel="stylesheet" href="css/vendorConcatenado.css">
+  
 </head>
 
 <body id="page-top">
@@ -681,18 +676,14 @@
       disable: 'mobile'
     });
   </script>
-  <!-- CHARTJS -->
+ 
   <script src="vendor/chartJS/Chart.bundle.min.js"></script>
   <script src="js/graficosChart.min.js"></script>
-  <!-- SWEET ALERT2 -->
   <script src="vendor/sweetalert2/sweetalert2.all.min.js"></script>
-  <!-- polyfill para dar suporte a outros browsers -->
-  <!-- <script src="https://unpkg.com/promise-polyfill"></script> -->
   <script src="js/modaisSweetAlert.js"></script>
-  <!-- CANVAS -->
+  
   <script src="vendor/canvas-js/canvasjs.min.js"></script>
   <script src="js/graficos.min.js"></script>
-  <!-- <script  src="vendor/type-Writer/typewriter.min.js"></script> -->
 
   <!-- API DO GOOGLE MAPS -->
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuP4Or3N_bw64sOWuSxvO9KiBwOvMqObY" type="text/javascript"></script> -->
